change back to gcc

--- a/openmp/hello/c/Makefile
+++ b/openmp/hello/c/Makefile
@@ -21,7 +21,7 @@ OBJDIR = object
 OBJS = $(patsubst %.c, $(OBJDIR)/%.o, $(SRCS))
 
 # name of the compiler
-CC = mpicc
+CC = gcc
 # additional compiler flags to pass in
 CFLAGS = -fopenmp -Wall --std=c11 -L.
 # libraries for the linker
