--- a/openmp/quad/c/CMakeLists.txt
+++ b/openmp/quad/c/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
 
 # Set project name
-project(hello C)
+project(quad C)
 
 # Set C11 standard
 set(CMAKE_C_STANDARD 11)
@@ -16,4 +16,4 @@ if(OpenMP_C_FOUND)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-add_executable(hello hello.c)
+add_executable(quad quad.c)
